# pulumi-component-provider-py-boilerplate

./: .gitignore  Makefile  PulumiPlugin.yaml  README.md  __main__.py  randomComponent.py  requirements.txt  schema.json  staticpage.py
deployment-templates/: release.yml
example/: Pulumi.yaml
examples/simple/: Pulumi.yaml
misc/: pyproject.toml
provider/: go.mod  go.sum
provider/cmd/pulumi-resource-xyz/: .gitignore  Makefile  requirements.txt  setup.py
provider/cmd/pulumi-resource-xyz/xyz_provider/: __init__.py  __main__.py  provider.py  staticpage.py
sdk/: go.mod  go.sum
sdk/dotnet/: Utilities.cs
sdk/go/xyz/: init.go  provider.go  pulumiUtilities.go  staticPage.go
sdk/python/: README.md
