[project]
  name = "pulumi_xyz"
  description = "A Pulumi component provider from the pulumi-component-provider-py-boilerplate template."
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "semver>=2.8.1"]
  keywords = ["pulumi", "xyz"]
  readme = "README.md"
  requires-python = ">=3.8"
  version = "0.0.0"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://example.com"
    Repository = "https://github.com/example/pulumi-xyz"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_xyz = ["py.typed", "pulumi-plugin.json"]
